# InMoov_speech

./: .gitignore  README.md  speech2text.py  speechbot_tutorial_fin2.docx  txt2speech.py
html/: annotated.html  class_state_pub-members.html  class_state_pub.html  classes.html  functions.html  functions_func.html  functions_vars.html
html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js
in_moov_speech/: CMakeLists.txt  package.xml
in_moov_speech/scripts/: setup.py  speech2text.py  speech2txt.py  txt2speech.py
inmoov_chatbot/: CMakeLists.txt  COPYING  README.md  package.xml
inmoov_chatbot/bot_Henry/: README.txt
inmoov_chatbot/bot_Henry/config/xnix/: config.ros.yaml  config.yaml  logging.yaml
inmoov_chatbot/bot_Henry/scripts/xnix/: henry-console.sh  henry-ros.sh  henry-webchat.sh
inmoov_chatbot/bot_Henry/storage/categories/: _inmoovApps.aiml  _inmoovChatbot.aiml  _inmoovGestures.aiml  _inmoovKnowledge.aiml  _inmoovTranslator.aiml  _inmoovWeather.aiml  animal.aiml  bot_profile.aiml  client_profile.aiml  contactaction.aiml  contactfunctions.aiml  date.aiml  dialog.aiml  familiar.aiml  firstrest.aiml  inappropriate.aiml  inquiry.aiml  insults.aiml  keywords.aiml  knowledge.aiml  learnf.aiml  lists.aiml  ontology.aiml  oob.aiml  personality.aiml  picture.aiml  profanity.aiml  reductions1.aiml  reductions2.aiml  roman.aiml  udc.aiml  (+8 more)
inmoov_controls/: CMakeLists.txt
inmoov_controls/scripts/: Convertion.txt  InMoovNodeCenterposition.cpp  InMoovNodeJointStatePub.cpp  InMoovNodeJointStateSubNPub.cpp
(+27 files in other folders)
